objects/CreditCard_Tokenization_URL__c.object
<CustomObject>
    <fields>
        <fullName>URL_EndPoint__c</fullName>
        <description>This stores URL endpoint.</description>
        <label>URL_EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Header__c</fullName>
        <description>This stores URL header.</description>
        <label>URL_Header</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field stores tokenization URL</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
</CustomObject>